unnecessary fields removed
